# EE475

./: .gitignore  Doxyfile  README.md
3Dprinter/: back plate actual.STL  bananas.STL  bananas.gx  big screen.STL  big screen.gx  blank cubby.SLDPRT  blank cubby.STL  camera.gx  front plate actual.STL  front plate actual.gx  maze.STL  narrow number plate.STL  pillar_25mm.gx  pillar_45mm.gx  small lcds.STL  top right.STL  wide number plate.STL
Arduino/: arduinoCopy.bat  arduinoCopy.sh  image.py
Arduino/Libraries/: ArduinoGameManager.cpp  ArduinoGameManager.h  Button.cpp  Button.h  ButtonManager.cpp  ButtonManager.h  Definitions.cpp  Definitions.h  GameManager.cpp  GameManager.h  GameModule.h  GameState.cpp  GameState.h  LFSR.cpp  LFSR.h  RGB_LED.cpp  RGB_LED.h  SPIManager.cpp  SPIManager.h  Seg7.cpp  Seg7.h  ShiftIn.cpp  ShiftIn.h  ShiftOut.cpp  ShiftOut.h  ShiftReg.cpp  ShiftReg.h  Timer.cpp  Timer.h
Arduino/Modules/Control/: Control.cpp  Control.h  Control.ino
Arduino/Modules/HorizontalWires/: HorizontalWire.cpp  HorizontalWire.h  HorizontalWires.ino
Arduino/Modules/Maze/: Maze.cpp  Maze.h  Maze.ino  MazeBoard.cpp  MazeBoard.h
Arduino/Modules/Password/: Password.h  Password.ino  PasswordContainer.cpp  PasswordContainer.h
Arduino/Modules/SimonSays/: GameModule.h  SimonSays.cpp  SimonSays.h  SimonSays.ino
Arduino/Modules/Symbols/: Atlas.cpp  Atlas.h  Symbols.cpp  Symbols.h  Symbols.ino
Arduino/Modules/TheButton/: TheButton.cpp  TheButton.h  TheButton.ino
Arduino/TestCode/DisplayTest/: DisplayTest.ino
Arduino/TestCode/Dummy/: Dummy.cpp  Dummy.h  Dummy.ino
Arduino/TestCode/pixels/: pixels.ino
Arduino/TestCode/shiftreg/: LFSR.cpp  LFSR.h  myButtonListener.cpp  myButtonListener.h  myTimerListener.cpp  myTimerListener.h  shiftreg.ino
Lab1/Mothership/: MyConfig.mc3  camera.c  communication.c  communication.h  main.c  mothership.c  mothership.h  probe.c  sram.c
Lab1/Mothership/nbproject/: Makefile-C18_18F87K22.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-C18_18F87K22.bash  configurations.xml  project.xml
Lab1/Probe/: .gitignore  MyConfig.mc3  camera.c  camera.h  communication.c  communication.h  interrupts.c  main.c  mothership.c  mothership.h  probe.h  sram.c  sram.h
Lab1/Probe/nbproject/: Makefile-C18_18F87K22.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  configurations.xml  project.xml
Lab1/State/: MyConfig.mc3  configuration_bits.c  interrupts.c  main.c  user.c
Pi/: CMakeLists.txt  README  setup.sh  toolchain.sh
Pi/TestCode/: CMakeLists.txt  main.cpp
Pi/cmake/: Toolchain-RaspberryPi.cmake
Pi/src/: AlsaSound.cpp  AlsaSound.h  Definitions.h  GameManager.cpp  GameManager.h  Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h  SPIManager.cpp  SPIManager.h  SoundManager.cpp  SoundManager.h  bcm2835.c  main.cpp  spitest.cpp
Resources/: main.py
(+8 files in other folders)
